--- a/index.html
+++ b/index.html
@@ -7,10 +7,8 @@
     <title><!-- your title here --></title> 
 </head>
 <body>
-    <h1><!-- your chatbot title here too --></h1>
-    <p><!-- your chatbot description here --></p>
-    <pre><!-- your chatbot code here --></pre>
-    <p>Made with <a href="http://fossasia.org">FOSSASIA</a> <a href="http://skills.susi.ai">SUSI.AI</a></p>
+    <h1>Botjustin</h1>
+
     <p>
     <script type='text/javascript' id='susi-bot-script' data-userid='047735c60c745c1c151aefbbf53d32db' data-group='Games, Trivia and Accessories' data-language='en' data-skill='Bot justin' src='https://skills.susi.ai/susi-chatbot.js'></script>
     </p>
