--- a/index.html
+++ b/index.html
@@ -4,14 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title><!-- your title here --></title> 
+    <title>botjustin</title> 
 </head>
 <body>
     <h1>Botjustin</h1>
-
     <p>
     <script type='text/javascript' id='susi-bot-script' data-userid='047735c60c745c1c151aefbbf53d32db' data-group='Games, Trivia and Accessories' data-language='en' data-skill='Bot justin' src='https://skills.susi.ai/susi-chatbot.js'></script>
-    </p>
-    
+    </p>   
 </body>
 </html>
